# max-demo

./: CMakeLists.txt
assets/meshes/: sphere.fbx  sphere.glb
cmake/: dear-imgui.cmake
runtime/temp/: max_frame151.rdc  max_frame158.rdc  max_frame176.rdc
runtime/textures/.mayaSwatches/: fieldstone-rgba.dds_hcm.swatch
src/: camera.cpp  camera.h  components.h  entities.cpp  entities.h  handles.h  input.cpp  input.h  main.cpp  maya_bridge.cpp  maya_bridge.h  render.cpp  render.h  scene.cpp  scene.h  sky.cpp  sky.h  texture_manager.cpp  texture_manager.h  world.cpp  world.h
src/imgui/: imgui.cpp  imgui.h
src/shaders/: fs_accumulation.sc  fs_combine.sc  fs_cube.sc  fs_deferred.sc  fs_gbuffer.sc  fs_gbuffer_cubemap.sc  fs_light_dir.sc  fs_octahedral.sc  fs_prefilter.sc  fs_probe.sc  fs_shadow.sc  fs_sky.sc  fs_skybox.sc  varying.def.sc  vs_cube.sc  vs_gbuffer.sc  vs_probe.sc  vs_screen.sc  vs_shadow.sc  vs_sky.sc
src/shaders/common/: common.sh  normal_encoding.sh  shaderlib.sh  uniforms.sh  util.sh
